<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/layoutArtistButtons"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/musiciansButton"
            style="@style/ArtistButtonStyle"
            android:text="@string/musicians_button_text" />

        <Button
            android:id="@+id/bandsButton"
            style="@style/ArtistButtonStyle"
            android:layout_marginStart="10dp"
            android:text="@string/bands_button_text" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutArtistButtons"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/artist_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
